--- a/index.html
+++ b/index.html
@@ -103,26 +103,24 @@
         </p>
         <div class="info box">
           <div class="email-info">
-            <h5><i class="bx bxs-envelope bx-tada"></i> Email</h5>
-            <span><a href="#contact">Enviar correo</a> </span>
+            <a href="#contact"><i class="bx bxs-envelope bx-tada"></i></a>
           </div>
           <div class="email-info">
-            <h5><i class="bx bxl-whatsapp bx-tada"></i> Whatsapp</h5>
-            <span><a href="#" id="btnEnviarMensaje"> Enviar mensaje</a></span>
+            <a href="#" id="btnEnviarMensaje"
+              ><i class="bx bxl-whatsapp bx-tada"></i
+            ></a>
           </div>
 
           <div class="email-info">
-            <h5><i class="bx bxl-linkedin-square bx-tada"></i> Linkedin</h5>
-            <span><a href="#" id="btnEnviarMensaje">Ver Perfil</a></span>
+            <a href="#" id="btnEnviarMensaje"
+              ><i class="bx bxl-linkedin-square bx-tada"></i
+            ></a>
           </div>
 
           <div class="behance-info">
-            <h5><i class="bx bxl-github bx-tada"></i> Github</h5>
-            <span
-              ><a href="https://github.com/Luis9092" target="_blank">
-                Luis9092</a
-              ></span
-            >
+            <a href="https://github.com/Luis9092" target="_blank">
+              <i class="bx bxl-github bx-tada"> </i
+            ></a>
           </div>
         </div>
         <div class="btn-box">
