--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
             </div>
           </div>
         </li>
+        <li>
+          <div class="btnchangeColor">
+            <a id="btnColor" href="#" class="btn"
+              ><i class="bx bxs-palette bx-spin"></i></a
+            >
+          </div>
+        </li>
       </ul>
       <div id="menu-icon" class="bx bx-menu"></div>
     </header>
@@ -128,9 +135,6 @@
             >Descargar cv</a
           >
           <a href="#" class="btn">Contratar ahora</a>
-          <a id="btnColor" href="#" class="btn"
-            ><i class="bx bxs-palette bx-spin"></i> Color</a
-          >
         </div>
       </div>
 
@@ -178,7 +182,6 @@
           </svg>
         </div>
         <div class="liquid-shape">
-          
           <svg
             viewBox="0 0 500 500"
             xmlns="http://www.w3.org/2000/svg"
@@ -186,22 +189,21 @@
             width="100%"
             id="blobSvg"
           >
-
-          <defs>
-            <pattern
-              id="pattern"
-              x="0"
-              y="0"
-              width="28"
-              height="49"
-              patternUnits="userSpaceOnUse"
-              fill="var(--primary-color)"
-            >
-              <path
-                d="M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z"
-              ></path>
-            </pattern>
-          </defs>
+            <defs>
+              <pattern
+                id="pattern"
+                x="0"
+                y="0"
+                width="28"
+                height="49"
+                patternUnits="userSpaceOnUse"
+                fill="var(--primary-color)"
+              >
+                <path
+                  d="M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z"
+                ></path>
+              </pattern>
+            </defs>
             <path fill="url(#pattern)">
               <animate
                 attributeName="d"
@@ -427,9 +429,8 @@
     <!-- CONTACT SECTION -->
 
     <section class="contact sec" id="contact">
-
       <div id="matrix" class="matrix"></div>
-      
+
       <div class="main-text scroll-scale">
         <span>Contacto</span>
         <h2 class="title"><span>Enviar Correo</span></h2>
