--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
             <div class="titleonload">root@hacker:~</div>
           </div>
           <div class="terminal-body">
+            <div class="commandline">
+              <div class="text">
+                <span>C:\Users\TinoKum\ProyectsNasa></span>
+                <span> date</span>
+              
+              </div>
+              <div class="inputtext">
+                <span>C:\Users\TinoKum\ProyectsNasa></span>
+                <span id="horaactual"></span>
+              </div>
+            </div>
+
             <p id="loading-text">Cargando sistema...</p>
             <div class="progress-bar">
               <div class="progress"></div>
